fix - 操作审计query逻辑优化